# sanctra-avatar-gpu

./: .gitignore  .pre-commit-config.yaml  Dockerfile.gpu  LICENSE  README.md  pyproject.toml  start.sh
.github/workflows/: ci.yaml
.paperclip/: GIT_REVISION_HYGIENE.md  PROJECT_GUARDRAILS.md
.sanctra/: ATTRIBUTIONS.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  SECURITY.md
server/: main.py  sadtalker_runner.py
