[build-system]
requires = [""hatchling""]
build-backend = ""hatchling.build""

[project]
name = ""sanctra-avatar-gpu""
version = ""0.1.0""
description = ""GPU SadTalker REST service for rendering 1080p MP4 avatars.""
readme = ""README.md""
requires-python = "">=3.10""
dependencies = [
  ""fastapi>=0.112.0"",
  ""uvicorn[standard]>=0.30.0"",
  ""google-cloud-storage>=2.17.0"",
  ""numpy>=1.26.0"",
  ""opencv-python-headless>=4.10.0.84"",
  ""pillow>=10.3.0""
]

[tool.ruff]
line-length = 100
